--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -11,8 +11,21 @@ a:hover{
   display: flex;
   margin-bottom: 2em;
   align-items: flex-end;
+
 }
+
 
 .profile-pic {
   margin-right: 2.5em;
+}
+
+li {
+  margin: -0.75em;
+}
+
+@media only screen and (max-width: 600px) {
+  .hero {
+    display: flex;
+    flex-direction: column;
+  }
 }
